--- a/style/variables/color.scss
+++ b/style/variables/color.scss
@@ -6,9 +6,8 @@ $gradient: (
 ) !default;
 $colorMain: (
         'one':#fff,
-        'one_l':#fff,
-        'one_d':#fff,
         'two':#fff,
+        'three':#fff,
         'error':#fff,
         'info':#fff,
         'warning':#fff,
