--- a/components/breadcrumb/style.scss
+++ b/components/breadcrumb/style.scss
@@ -12,7 +12,7 @@
 
 
   .breadcrumb-divider, .breadcrumb-item-disabled, .#{$prefix}icon {
-    color: var(--color-disabled)
+    color: var(--color-border)
   }
 
 
