--- a/components/table/style.scss
+++ b/components/table/style.scss
@@ -9,31 +9,31 @@ $data-table-regular-header-height: 38px !default;
   position: relative;
 
     .table-wrapper {
-      background-color: var(--color-sheet);
-      color: var(--color-text-primary);
+      background-color: var(--color-sheet-container-lowest);
+      color: var(--color-on-sheet-container-lowest);
     }
     .table-svg-path {
       fill: var(--color-sheet);
     }
     .table-editable-icon {
-      background-color: var(--color-sheet) !important;
-      color: var(--color-text-primary) !important;
+      background-color: var(--color-sheet);
+      color: var(--color-on-sheet);
     }
     &.table-fixed-header {
       thead th {
-        background: var(--color-sheet);
-        box-shadow: inset 0 -2px var(--color-divider)
+        box-shadow: inset 0 -2px var(--color-border)
       }
     }
 
     thead {
       tr {
         &:last-child th {
-          border-bottom: 1px solid var(--color-divider)
+          border-bottom: 1px solid var(--color-border)
         }
 
         th {
-          color: var(--color-text-secondary)
+          background-color: var(--color-sheet);
+          color: var(--color-on-sheet)
         }
       }
     }
@@ -41,16 +41,19 @@ $data-table-regular-header-height: 38px !default;
     &.table-fixed-first-columns {
       tr {
         th:first-child {
-          background: var(--color-sheet)
+          background: var(--color-sheet);
+          color: var(--color-on-sheet)
         }
 
         td:first-child {
-          background: var(--color-sheet)
+          background: var(--color-sheet);
+          color: var(--color-on-sheet)
         }
 
         &:hover {
           td:first-child {
-            background: var(--color-sheet-hover)
+            background: var(--color-sheet-container);
+            color: var(--color-on-sheet-container)
           }
         }
       }
@@ -60,7 +63,7 @@ $data-table-regular-header-height: 38px !default;
       tbody {
         tr:nth-child(2n):not(:hover) {
           td {
-            background: var(--color-sheet-active)
+            background: var(--color-sheet-container-low)
           }
         }
       }
@@ -69,23 +72,23 @@ $data-table-regular-header-height: 38px !default;
     tbody {
       tr {
         &:active {
-          background: var(--color-sheet-active)
+          background: var(--color-sheet-container)
         }
 
         &:hover {
-          background: var(--color-sheet-hover)
+          background: var(--color-sheet-container)
         }
       }
 
       tr:not(:last-child) {
         td {
-          border-bottom: 1px solid var(--color-divider)
+          border-bottom: 1px solid var(--color-border)
         }
       }
     }
 
     &.table-bordered .table-wrapper {
-      border: 1px solid var(--color-divider);
+      border: 1px solid var(--color-border);
       border-collapse: collapse;
     }
 
