--- a/components/card/style.scss
+++ b/components/card/style.scss
@@ -71,8 +71,8 @@
   transition: box-shadow .3s cubic-bezier(0.4, 0, 0.2, 1);
   @include elevation('md');
   border-radius: map_get($borders, 'md');
-  background-color: var(--color-sheet);
-  border-color: var(--color-sheet);
+  background-color: var(--color-sheet-container-low);
+  border-color: var(--color-sheet-container-low);
   color: var(--color-on-sheet);
 
 
