--- a/components/button/style.scss
+++ b/components/button/style.scss
@@ -59,7 +59,7 @@ $btn-transition: opacity 0.2s map-get($transition, 'ease-in-out') !default;
   white-space: nowrap;
 
   &:not(.btn-text):not(.btn-outlined) {
-    background-color: var(--color-sheet);
+    background-color: var(--color-sheet-container-low);
     color: var(--color-on-sheet);
   }
 
@@ -342,7 +342,7 @@ $btn-transition: opacity 0.2s map-get($transition, 'ease-in-out') !default;
 .#{$prefix}button-group {
   position: relative;
   color: var(--color-on-sheet);;
-  background-color: var(--color-sheet);
+  background-color: var(--color-sheet-low);
 
   @include states();
 
