--- a/components/modal/style.scss
+++ b/components/modal/style.scss
@@ -25,7 +25,7 @@
   outline: none;
 
   .modal-content {
-    border: 1px solid var(--color-border);
+    border: 1px solid var(--color-sheet-container-low);
   }
 
 
