--- a/components/modal/style.scss
+++ b/components/modal/style.scss
@@ -26,6 +26,8 @@
 
   .modal-content {
     border: 1px solid var(--color-sheet-container-low);
+    background-color: var(--color-sheet);
+    color: var(--color-on-sheet)
   }
 
 
