--- a/components/breadcrumb/style.scss
+++ b/components/breadcrumb/style.scss
@@ -10,6 +10,10 @@
   margin: 0 !important;
   padding: 0 14px;
 
+  &.breadcrumbs-sheet {
+    background-color: var(--color-sheet-container);
+    color: var(--color-on-sheet);
+  }
 
   .breadcrumb-divider, .breadcrumb-item-disabled, .#{$prefix}icon {
     color: var(--color-border)
