--- a/components/modal/style.scss
+++ b/components/modal/style.scss
@@ -27,7 +27,7 @@
 
   .modal-content {
     border: 1px solid var(--color-sheet-container-low);
-    background-color: var(--color-sheet);
+    background-color: var(--color-sheet-container-low);
     color: var(--color-on-sheet)
   }
 
