--- a/components/form/text-editor/style.scss
+++ b/components/form/text-editor/style.scss
@@ -77,6 +77,8 @@
 
   table {
     width: 100%;
+    border: 1px solid var(--color-border);
+    border-collapse: collapse;
 
     thead {
       tr {
