--- a/components/bar/scss/toolbar.scss
+++ b/components/bar/scss/toolbar.scss
@@ -26,6 +26,8 @@
       overflow: auto;
       position: absolute;
       transition: .5s all map.get(base.$transition, 'swing');
+      background-color: var(--color-sheet);
+      color: var(--color-on-sheet);
       @include mixins.rtl() {
         right: -300px;
       }
@@ -94,7 +96,6 @@
     &:before {
       content: '-';
       position: absolute;
-      color: #9e9e9e;
       @include mixins.rtl() {
         right: -8px;
       }
@@ -110,10 +111,10 @@
     max-height: 500px;
     overflow-y: auto;
     @include mixins.rtl() {
-      border-right: 1px solid #9e9e9e;
+      border-right: 1px solid;
     }
     @include mixins.ltr() {
-      border-left: 1px solid #9e9e9e;
+      border-left: 1px solid;
     }
   }
 
